Correção de erros

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ locale:             pt_BR
 languages:          ["pt_BR", "en", "eo"]
 exclude_from_localizations: ["javascript", "images", "css"]
 url:                http://muniz95.tk
+description:        "Moon is a minimal, one column jekyll theme for your blog."
 
 # Jekyll
 permalink:          /:title/
