--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:              "Rodrigo Muniz"
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+logo:               '/assets/img/logo.png'
+background:         '/assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 url:                http://muniz95.tk
 description:        "Portfólio de Rodrigo Muniz."
