--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              "Rodrigo Muniz"
 reading_time:       true
 words_per_minute:   200
-logo:               '/assets/img/logo.png'
+logo:               '/assets/img/profile.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 url:                https://muniz95.github.io
 baseurl:            /
