--- a/package.json
+++ b/package.json
@@ -1,32 +1,64 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "muniz95-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Meu Blog",
+  "version": "2.0.0-alfa",
+  "author": "Rodrigo Muniz <rodrigo.temiski1995@gmail>, Willian Justen <willianjustenqui@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.13.51",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.9",
-    "gatsby-plugin-styled-components": "^3.1.2",
-    "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-transformer-remark": "^2.6.10",
-    "gatsby-transformer-sharp": "^2.2.5",
+    "babel-plugin-styled-components": "^1.10.0",
+    "dotenv": "^8.0.0",
+    "gatsby": "^2.9.0",
+    "gatsby-image": "^2.1.3",
+    "gatsby-plugin-algolia-search": "^0.5.0",
+    "gatsby-plugin-feed": "^2.3.0",
+    "gatsby-plugin-google-analytics": "^2.1.1",
+    "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-netlify": "^2.1.0",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
+    "gatsby-plugin-netlify-cms": "^4.0.3",
+    "gatsby-plugin-offline": "^2.2.1",
+    "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.2.0",
+    "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-plugin-twitter": "^2.1.0",
+    "gatsby-remark-autolink-headers": "^2.1.0",
+    "gatsby-remark-copy-linked-files": "^2.1.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.0.16",
+    "gatsby-remark-lazy-load": "^1.0.1",
+    "gatsby-remark-prismjs": "^3.3.0",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-remark-responsive-iframe": "^2.2.0",
+    "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-transformer-remark": "^2.4.0",
+    "gatsby-transformer-sharp": "^2.2.0",
+    "gatsby-transformer-sqip": "^2.1.0",
+    "gsap": "^2.1.3",
+    "lazysizes": "^5.1.0",
+    "netlify-cms-app": "^2.9.3",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2"
+    "react-instantsearch-dom": "^5.7.0",
+    "slugify": "^1.3.4",
+    "smooth-scroll": "^16.1.0",
+    "styled-components": "^4.3.1",
+    "styled-icons": "^8.1.0",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
-    "gh-pages": "2.0.1",
     "prettier": "^1.18.2"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "frontend",
+    "blog"
   ],
   "license": "MIT",
   "scripts": {
@@ -35,15 +67,13 @@
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d public -b master"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/willianjusten/willianjusten.com.br"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/willianjusten/willianjusten.com.br"
   }
 }
