--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/willianjusten/willianjusten.com.br"
+    "url": "https://github.com/muniz95/muniz95.github.io"
   },
   "bugs": {
-    "url": "https://github.com/willianjusten/willianjusten.com.br"
+    "url": "https://github.com/muniz95/muniz95.github.io"
   }
 }
