Atualização da estrutura do site

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,8 +5,11 @@ backend:
   site_domain: muniz95.com.br
 
 media_folder: static/assets/img
-public_folder: assets/img
+public_folder: /assets/img
 publish_mode: editorial_workflow
+slug:
+  encoding: 'ascii'
+  clean_accents: true
 
 collections:
   - name: posts # Used in routes, e.g. /admin/collections/blog
